--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "homepage": "https://github.com/guilhermeazz/PI_EventPro_2025-1#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2",
+    "mongoose": "^8.15.0",
+    "multer": "^1.4.5-lts.2",
     "qrcode": "^1.5.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
@@ -36,6 +38,7 @@
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.14.1",
     "@types/qrcode": "^1.5.5",
     "@types/swagger-jsdoc": "^6.0.4",
